--- a/lib/jade/index.jade
+++ b/lib/jade/index.jade
@@ -63,9 +63,7 @@ block content
 
       .use-in-any-project
         h1 Use in any project
-        img(src="img/rubyonrails.png")
-        img(src="img/nodejs.png")
-        img(src="img/html5css3.jpg")
+        img(src="img/framework_logos.jpg")
         :markdown
           The Kickstart library is maintained [with Gulp](/docs/#{docsVersion}/#nodejs) and ported as a [Rails Gem](/docs/#{docsVersion}/#rails).
 
