--- a/lib/jade/index.jade
+++ b/lib/jade/index.jade
@@ -69,8 +69,16 @@ block content
 
       .faster-and-lighter-than-bootstrap
         h1 Faster and lighter than Bootstrap
-        img(src="#")
-        img(src="#")
+        .graph.graph-css
+          .kickstart
+          .bootstrap
+          .foundation
+
+        .graph.graph-js
+          .kickstart
+          .bootstrap
+          .foundation
+
         p ...and even smaller when used semantically.
 
     footer.specs
