--- a/lib/sass/pages/index.sass
+++ b/lib/sass/pages/index.sass
@@ -181,6 +181,13 @@ section.blue
       +heading-sm
       text-align: center
 
+  .graph
+    width: 100%
+    height: 300px
+    border:
+      left: 1px solid map-get($gray, darkest)
+      bottom: 1px solid map-get($gray, darkest)
+
 
 .specs
   +row
