Adding graph styles

--- a/lib/jade/index.jade
+++ b/lib/jade/index.jade
@@ -69,11 +69,13 @@ block content
 
       .faster-and-lighter-than-bootstrap
         h1 Faster and lighter than Bootstrap
+        h2 CSS
         .graph.graph-css
           .kickstart
           .bootstrap
           .foundation
 
+        h2 JavaScript
         .graph.graph-js
           .kickstart
           .bootstrap
