--- a/lib/jade/index.jade
+++ b/lib/jade/index.jade
@@ -78,8 +78,13 @@ block content
         h2 JavaScript
         .graph.graph-js
           .kickstart
-          .bootstrap
-          .foundation
+          .group
+            .jquery
+            .bootstrap
+
+          .group
+            .jquery
+            .foundation
 
         p ...and even smaller when used semantically.
 
