--- a/lib/sass/pages/index.sass
+++ b/lib/sass/pages/index.sass
@@ -197,12 +197,26 @@ section.blue
     margin:
       bottom: $space
     clear: both
+    display: flex
+    align-items: flex-end
 
-    .kickstart, .bootstrap, .foundation
+    .kickstart, .bootstrap, .foundation, .group
       width: calc(33% - #{$space})
       margin-left: $space
       display: inline-block
       vertical-align: bottom
+
+      &:before, &:after
+        display: block
+        text-align: center
+        color: map-get($gray, dark)
+
+      &:after
+        margin-top: 5px
+        color: white
+
+      &:before
+        margin-top: -25px
 
     .kickstart
       background: map-get($colors, blue)
@@ -213,25 +227,96 @@ section.blue
     .foundation
       background: map-get($white, darkest)
 
+    .jquery
+      background: map-get($colors, red)
+
     &.graph-css
       .kickstart
         height: (100% * (73/148))
 
+        &:before
+          content: "Kickstart"
+          color: map-get($colors, blue)
+
+        &:after
+          content: "73kb"
+
       .bootstrap
         height: (100% * (110/148))
 
+        &:before
+          content: "Bootstrap"
+
+        &:after
+          content: "110kb"
+
       .foundation
         height: 100%
+
+        &:before
+          content: "Foundation"
+
+        &:after
+          content: "148kb"
 
     &.graph-js
       .kickstart
         height: (100% * (8/271))
 
+        &:before
+          content: "Kickstart \a 8kb"
+          color: map-get($colors, blue)
+          white-space: pre
+          margin-top: -50px
+
+      .group
+        height: 100%
+        display: flex
+        flex-direction: column
+        justify-content: flex-end
+
+      .bootstrap, .foundation
+        width: 100%
+        margin: 0
+        display: block
+
+        &:before
+          color: white
+
       .bootstrap
-        height: (100% * (116/271))
+        height: (100% * (32/271))
+
+        &:before
+          content: "Bootstrap"
+
+        &:after
+          content: "32kb"
 
       .foundation
-        height: 100%
+        height: (100% * (187/271))
+
+        &:before
+          content: "Foundation"
+
+        &:after
+          content: "187kb"
+
+      .jquery
+        height: (100% * (84/271))
+
+        &:before
+          content: "jQuery"
+          text-align: center
+          color: map-get($colors, red)
+          margin-top: -25px
+          display: block
+
+        &:after
+          content: "84kb"
+          color: white
+          margin-top: 5px
+          text-align: center
+          display: block
 
 .specs
   +row
