--- a/lib/sass/pages/index.sass
+++ b/lib/sass/pages/index.sass
@@ -172,151 +172,190 @@ section.blue
       &.extension-three
         bottom: 8%
 
-.last-pitch
-  .use-in-any-project,
-  .faster-and-lighter-than-bootstrap
-    +column('half')
+.use-in-any-project,
+.faster-and-lighter-than-bootstrap 
+  > h1
+    +heading-md
+    text-align: center
 
-    > h1
-      +heading-sm
+    @media screen and (min-width: $tablet)
+      +heading-xxl
+
+  > h2
+    +heading-xs
+
+  img
+    margin: 0px auto
+
+.faster-and-lighter-than-bootstrap
+  p
+    text-align: center
+
+  .logos
+    text-align: center
+    margin-bottom: $space 
+
+  img
+    max-height: 100px
+    vertical-align: middle
+    display: inline-block
+    margin: 0px $space
+
+    @media screen and (min-width: $tablet)
+      max-height: 150px 
+
+.js, .css
+  display: inline-block
+  vertical-align: top
+  width: 100%
+
+  h2
+    +heading-xs
+
+  @media screen and (min-width: $tablet)
+    width: 50%
+    padding: $space*2
+
+.graph
+  width: 100%
+  height: 300px
+  margin:
+    bottom: $space
+  clear: both
+  display: flex
+  align-items: flex-end
+  justify-content: space-between
+
+  .kickstart, .bootstrap, .foundation, .group, .jquery
+    &:before, &:after
+      font-size: 0.8rem
+      line-height: normal
+
+      @media screen and (min-width: $tablet)
+        font-size: 1rem
+
+  .kickstart, .bootstrap, .foundation, .group
+    width: 33.4%
+    display: inline-block
+    vertical-align: bottom
+
+    &:before, &:after
+      display: block
       text-align: center
+      color: map-get($gray, dark)
 
-    > h2
-      +heading-xs
+    &:after
+      margin-top: 15px
+      color: white
 
-    img
-      margin: 0px auto
+    &:before
+      margin-top: -20px
 
-
-  .graph
-    width: 100%
-    height: 300px
-    border:
-      left: 1px solid map-get($gray, darkest)
-      bottom: 1px solid map-get($gray, darkest)
-    margin:
-      bottom: $space
-    clear: both
-    display: flex
-    align-items: flex-end
-
-    .kickstart, .bootstrap, .foundation, .group
-      width: calc(33% - #{$space})
-      margin-left: $space
-      display: inline-block
-      vertical-align: bottom
-
-      &:before, &:after
-        display: block
-        text-align: center
-        color: map-get($gray, dark)
-
-      &:after
-        margin-top: 5px
-        color: white
-
-      &:before
+      @media screen and (min-width: $tablet)
         margin-top: -25px
 
+  .kickstart
+    background: map-get($colors, blue)
+
+  .bootstrap
+    background: map-get($gray, lighter)
+
+  .foundation
+    background: map-get($white, darkest)
+
+  .jquery
+    background: map-get($colors, red)
+
+  &.graph-css
     .kickstart
-      background: map-get($colors, blue)
+      height: (100% * (73/148))
+
+      &:before
+        content: "Kickstart"
+        color: map-get($colors, blue)
+
+      &:after
+        content: "73kb"
 
     .bootstrap
-      background: map-get($gray, lighter)
+      height: (100% * (110/148))
+
+      &:before
+        content: "Bootstrap"
+
+      &:after
+        content: "110kb"
 
     .foundation
-      background: map-get($white, darkest)
+      height: 100%
+
+      &:before
+        content: "Foundation"
+
+      &:after
+        content: "148kb"
+
+  &.graph-js
+    .kickstart
+      height: (100% * (8/271))
+
+      &:before
+        content: "Kickstart \a 8kb"
+        color: map-get($colors, blue)
+        white-space: pre
+        margin-top: -40px
+
+    .group
+      height: 100%
+      display: flex
+      flex-direction: column
+      justify-content: flex-end
+
+    .bootstrap, .foundation
+      width: 100%
+      margin: 0
+      display: block
+
+      &:before
+        color: white
+
+    .bootstrap
+      height: (100% * (32/271))
+
+      &:before
+        content: "Bootstrap"
+
+      &:after
+        content: "32kb"
+
+    .foundation
+      height: (100% * (187/271))
+
+      &:before
+        content: "Foundation"
+
+      &:after
+        content: "187kb"
 
     .jquery
-      background: map-get($colors, red)
+      height: (100% * (84/271))
 
-    &.graph-css
-      .kickstart
-        height: (100% * (73/148))
-
-        &:before
-          content: "Kickstart"
-          color: map-get($colors, blue)
-
-        &:after
-          content: "73kb"
-
-      .bootstrap
-        height: (100% * (110/148))
-
-        &:before
-          content: "Bootstrap"
-
-        &:after
-          content: "110kb"
-
-      .foundation
-        height: 100%
-
-        &:before
-          content: "Foundation"
-
-        &:after
-          content: "148kb"
-
-    &.graph-js
-      .kickstart
-        height: (100% * (8/271))
-
-        &:before
-          content: "Kickstart \a 8kb"
-          color: map-get($colors, blue)
-          white-space: pre
-          margin-top: -50px
-
-      .group
-        height: 100%
-        display: flex
-        flex-direction: column
-        justify-content: flex-end
-
-      .bootstrap, .foundation
-        width: 100%
-        margin: 0
+      &:before
+        content: "jQuery"
+        text-align: center
+        color: map-get($colors, red)
+        margin-top: -20px
         display: block
 
-        &:before
-          color: white
-
-      .bootstrap
-        height: (100% * (32/271))
-
-        &:before
-          content: "Bootstrap"
-
-        &:after
-          content: "32kb"
-
-      .foundation
-        height: (100% * (187/271))
-
-        &:before
-          content: "Foundation"
-
-        &:after
-          content: "187kb"
-
-      .jquery
-        height: (100% * (84/271))
-
-        &:before
-          content: "jQuery"
-          text-align: center
-          color: map-get($colors, red)
+        @media screen and (min-width: $tablet)
           margin-top: -25px
-          display: block
 
-        &:after
-          content: "84kb"
-          color: white
-          margin-top: 5px
-          text-align: center
-          display: block
+      &:after
+        content: "84kb"
+        color: white
+        margin-top: 15px
+        text-align: center
+        display: block
 
 .specs
   +row
