Almost done with home page, just need to add an animation to the top

--- a/lib/jade/index.jade
+++ b/lib/jade/index.jade
@@ -66,7 +66,7 @@ block content
         img(src="img/nodejs.png")
         img(src="img/html5css3.jpg")
       :markdown
-        The Kickstart library is maintained [with Gulp](/docs/#{docsVersion}/#nodejs) and ported as a [Rails Gem](/docs/#{docsVersion}/#rails).
+        The Kickstart library is available for basic HTML as well as official [Gulp](/docs/#{docsVersion}/#nodejs) and [Rails](/docs/#{docsVersion}/#rails) integrations.
 
   article.home-wrapper
     .faster-and-lighter-than-bootstrap
