--- a/lib/sass/docs.sass
+++ b/lib/sass/docs.sass
@@ -50,7 +50,7 @@ body
 // ------
 
 footer.main
-  background: map-get($gray, light)
+  background: darken(map-get($colors, blue), 15%)
   padding: $space 0
   color: white
 
