--- a/lib/sass/pages/index.sass
+++ b/lib/sass/pages/index.sass
@@ -10,8 +10,8 @@ img
 .home-wrapper
   +container 
   margin: 
-    top: 12vw
-    bottom: 12vw
+    top: calc(#{$space} + 10vw)
+    bottom: calc(#{$space} + 10vw)
 
 .index-hero
   background-color: white
@@ -187,13 +187,14 @@ section.blue
   img
     margin: 0px auto
 
-.faster-and-lighter-than-bootstrap
+.use-in-any-project
   p
+    +p(true)
     text-align: center
 
   .logos
     text-align: center
-    margin-bottom: $space 
+    margin: $space 0
 
   img
     max-height: 100px
