Pushing up for PB guys

--- a/lib/jade/index.jade
+++ b/lib/jade/index.jade
@@ -92,7 +92,7 @@ block content
             .jquery
             .foundation 
 
-    footer.specs
+    footer.specs(style="display: none")
       h1 Specifications
       
       .spec
