Getting ready to add some trixxxxx

--- a/lib/jade/index.jade
+++ b/lib/jade/index.jade
@@ -14,8 +14,9 @@ block content
     section.a-simple-core
       h1 A Simple Core 
       .code
-        // Insert iframe'd animation here 
-        
+        .preview
+          a(href="#") Call to Action!
+        .source
       .no-jquery-required
         img(src="img/jscss.jpg")
 
