We have animation.

--- a/lib/jade/index.jade
+++ b/lib/jade/index.jade
@@ -15,8 +15,8 @@ block content
       h1 A Simple Core 
       .code
         .preview
-          a(href="#") Call to Action!
-        .source
+          a#preview-button(href="#") Call to Action!
+        .source#source
       .no-jquery-required
         img(src="img/jscss.jpg")
 
@@ -125,3 +125,4 @@ block postJS
       type: "warning",
       delay: 2500
     });
+  script(src="js/index.js")
