--- a/lib/sass/pages/index.sass
+++ b/lib/sass/pages/index.sass
@@ -84,20 +84,20 @@ section.blue
       +root-element
       border-bottom-left-radius: 0
       border-bottom-right-radius: 0
-      border-color: map-get($white, darker)
+      border-color: map-get($white, darkest)
       width: 100%
       margin-bottom: 0
       text-align: center
 
-      a
-        margin-top: 49%
-
     .source
       +root-element
-      background: map-get($colors, blue)
+      background: map-get($black, lighter)
       width: 100%
       border-top-left-radius: 0
       border-top-right-radius: 0
+      color: map-get($colors, blue)
+      padding: $space
+      font-family: $mono-font-family
 
   .no-jquery-required
     img
