--- a/lib/sass/pages/index.sass
+++ b/lib/sass/pages/index.sass
@@ -65,11 +65,12 @@ section.blue
   > h1
     +column(12)
     text-align: center
-    margin-bottom: $space*2
     +heading-md
+    margin-bottom: $space*2
 
     @media screen and (min-width: $tablet)
       +heading-xxl
+      margin-bottom: $space*4
 
   .code, .no-jquery-required
     +column('half')
@@ -89,6 +90,12 @@ section.blue
       margin-bottom: 0
       text-align: center
 
+      a
+        display: inline-block
+        margin:
+          top: $space
+          bottom: $space 
+
     .source
       +root-element
       background: map-get($black, lighter)
@@ -98,6 +105,9 @@ section.blue
       color: map-get($colors, blue)
       padding: $space
       font-family: $mono-font-family
+
+      span.color
+        color: white
 
   .no-jquery-required
     img
