--- a/lib/jade/index.jade
+++ b/lib/jade/index.jade
@@ -15,6 +15,7 @@ block content
       h1 A Simple Core 
       .code
         .preview
+          h1 Welcome
           a#preview-button(href="#") Call to Action!
         .source#source
       .no-jquery-required
