--- a/lib/sass/pages/index.sass
+++ b/lib/sass/pages/index.sass
@@ -89,11 +89,15 @@ section.blue
       width: 100%
       margin-bottom: 0
       text-align: center
+      padding-top: $space
+
+      h1
+        +heading-rg
+        display: block
 
       a
         display: inline-block
         margin:
-          top: $space
           bottom: $space 
 
     .source
