Fix for iPad bug

--- a/lib/sass/pages/index.sass
+++ b/lib/sass/pages/index.sass
@@ -37,6 +37,7 @@ img
     max-width: 70%
     width: 700px
     fill: white
+    max-height: 400px
 
   h2
     +heading-sm
@@ -119,7 +120,7 @@ section.blue
       margin: 0px auto
       display: block
 
-      @media screen and (min-width: $tablet)
+      @media screen and (min-width: $phablet)
         max-width: 300px
 
 .captions
