Removing useless variables

--- a/lib/sass/core/_root-element.sass
+++ b/lib/sass/core/_root-element.sass
@@ -14,4 +14,4 @@
   @if $size != 1
     font-size: #{$size}rem
   line-height: $size * $default-line-height
-  font-family: $body-font-family
+  font-family: $default-font-family
