--- a/lib/sass/core/_typography.sass
+++ b/lib/sass/core/_typography.sass
@@ -1,5 +1,5 @@
 =type-default
-  font-family: $default-font
+  font-family: $default-font-family
   font-size: $default-font-size
   font-size: calc(#{$default-font-size - 2} + #{$scalingFactor})
   line-height: $default-line-height
