--- a/lib/sass/core/components/_navbar.sass
+++ b/lib/sass/core/components/_navbar.sass
@@ -105,7 +105,7 @@
     h1
       +heading-xxs
       margin-bottom: 0
-      font-size: $base-font-size
+      font-size: $default-font-size
       line-height: $default-line-height
 
     p
