--- a/lib/sass/themes/default/theme.sass
+++ b/lib/sass/themes/default/theme.sass
@@ -32,9 +32,9 @@ $primary-color:       map-get($colors, blue)
 $secondary-color:     map-get($white, darker)
 $space:               25px
 $heading-font-family: 'museo-sans', 'Lato', helvetica neue, sans-serif
-$body-font-family:    'museo-sans', 'Lato', helvetica neue, sans-serif
+$default-font-family:    'museo-sans', 'Lato', helvetica neue, sans-serif
 $mono-font-family:    'ubuntu-mono', monospace
-$base-font-size:      16px
+$default-font-size:      16px
 $default-font-color:  map-get($gray, darkest)
 $default-line-height: 1.4rem
 
@@ -43,9 +43,6 @@ $default-line-height: 1.4rem
 $scalingFactor: 0.2vw
 
 $rootElement: (paddingV: 5px, paddingH: 12px, border-radius: 3px)
-
-$default-font: $body-font-family
-$default-font-size: $base-font-size
 
 //
 // Core styling
