--- a/lib/jade/index.jade
+++ b/lib/jade/index.jade
@@ -59,6 +59,7 @@ block content
         p 
           | The library is just the core. Kickstart is designed to be extended and themed via the&nbsp;
           a(href="http://kickstart-store.com") Kickstart Store
+          | .
 
   article.home-wrapper 
     .use-in-any-project
@@ -122,7 +123,7 @@ block postJS
   script.
     k$.growl({
       title: "Warning: Alpha Release",
-      text: "This is an alpha release of Kickstart, please do not use in a production environment",
+      text: "This is an alpha release of Kickstart, please do not use in a production environment.",
       type: "warning",
       delay: 2500
     });
