--- a/lib/sass/pages/index.sass
+++ b/lib/sass/pages/index.sass
@@ -103,13 +103,14 @@ section.blue
 
     .source
       +root-element
-      background: map-get($black, lighter)
+      background: map-get($black, lightest)
       width: 100%
       border-top-left-radius: 0
       border-top-right-radius: 0
       color: map-get($colors, blue)
       padding: $space
       font-family: $mono-font-family
+      min-height: 275px
 
       span.color
         color: white
