--- a/lib/jade/tests/index.jade
+++ b/lib/jade/tests/index.jade
@@ -2,7 +2,7 @@ doctype html
 html(lang='en')
   head
 
-    link(rel="stylesheet" href="/css/kickstart.css")
+    link(rel="stylesheet" href="./css/kickstart.css")
     script(src="../../node_modules/mocha/mocha.js")
     script(src="../../node_modules/chai/chai.js")
 
