--- a/lib-docs/jade/_header.jade
+++ b/lib-docs/jade/_header.jade
@@ -1,7 +1,7 @@
 .main-navigation
   nav
     ul
-      - var xml = fs.readFileSync('lib/img/kickstart.svg')
+      - var xml = fs.readFileSync('lib-docs/img/kickstart.svg')
       li.navbar-title!= xml
         button(role="button") =
       li: a(href="/") Home
