--- a/lib-docs/jade/index.jade
+++ b/lib-docs/jade/index.jade
@@ -5,7 +5,7 @@ block page-stylesheet
 
 block hero
   header.index-hero
-    - var xml = fs.readFileSync('lib/img/kickstart.svg')
+    - var xml = fs.readFileSync('lib-docs/img/kickstart.svg')
     div!= xml
     h2 The framework we've been waiting for.
 
