--- a/lib/jade/layout.jade
+++ b/lib/jade/layout.jade
@@ -4,7 +4,7 @@ block variables
 
 html(lang='en')
   head
-    link(rel="stylesheet" href="/css/style.css")
+    link(rel="stylesheet" href="/css/style.min.css")
     meta(name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1, user-scalable=no")
     title My Website - #{title}
   body
@@ -17,4 +17,4 @@ html(lang='en')
           .wrapper
             p Made from <a href="http://twitter.com/everythingdotio">Everything</a>
 
-      script(src="/js/script.js")
+      script(src="/js/script.min.js")
