--- a/lib-docs/jade/tests/index.jade
+++ b/lib-docs/jade/tests/index.jade
@@ -2,7 +2,7 @@ doctype html
 html(lang='en')
   head
 
-    link(rel="stylesheet" href="/css/kickstart.css")
+    link(rel="stylesheet" href="./css/kickstart.css")
     script(src="../../node_modules/mocha/mocha.js")
     script(src="../../node_modules/chai/chai.js")
 
@@ -103,7 +103,6 @@ html(lang='en')
     article#panel-one foo
     article#panel-two foo
     article#panel-three foo
-
 
     footer
       script.
