Adding a simplistic 'fix' to the sticky footer issue.

--- a/lib-docs/sass/core/_base.sass
+++ b/lib-docs/sass/core/_base.sass
@@ -8,9 +8,9 @@ iframe
   margin-bottom: 25px
 
 =above-footer
-  flex: 1
+  // flex: 1
 
 =screen
-  display: flex
+  // display: flex
   min-height: 100vh
   flex-direction: column
