--- a/lib-docs/sass/docs.sass
+++ b/lib-docs/sass/docs.sass
@@ -10,7 +10,7 @@
 // ------------
 
 body
-  background-color: map-get($white, darkest)
+  // background-color: map-get($white, darkest)
 
 .wrapper
   +container
