--- a/lib-docs/sass/themes/default/theme.sass
+++ b/lib-docs/sass/themes/default/theme.sass
@@ -257,5 +257,9 @@ hr
 =tooltip_trigger
   +tooltip_trigger-default
 
+// Switch
+=switch
+  +switch-default
+
 @import core/_direct-apply.sass
 @import vendor/_index
