Fixing svg issues

--- a/lib-docs/sass/docs.sass
+++ b/lib-docs/sass/docs.sass
@@ -32,8 +32,9 @@ body
       fill: map-get($black, light)
 
   svg
-    height: 30px
+    height: 20px
     fill: white
+    margin-bottom: -4px
 
 // Footer
 // ------
