--- a/lib-docs/sass/pages/index.sass
+++ b/lib-docs/sass/pages/index.sass
@@ -37,7 +37,8 @@ img
     max-width: 70%
     width: 700px
     fill: white
-    max-height: 400px
+    max-height: 300px
+    margin-top: $space
 
   h2
     +heading-sm
