--- a/lib-docs/jade/_header.jade
+++ b/lib-docs/jade/_header.jade
@@ -2,7 +2,9 @@
   nav
     ul
       - var xml = fs.readFileSync('lib-docs/img/kickstart.svg')
-      li.navbar-title!= xml
+      li.navbar-title
+        a(href="/") 
+          != xml
         button(role="button") =
       li: a(href="/") Home
       li: a(href="/docs/#{docsVersion}/") Docs
