--- a/lib-docs/jade/about/index.jade
+++ b/lib-docs/jade/about/index.jade
@@ -8,63 +8,24 @@ block content
   :markdown
     # About
 
-    Kickstart is an effort to carve the process of website design down to its bare essentials.
+    Kickstart began as "Kickstrap", a tool to extend Bootstrap. The goal was to create a layer
+    where users could write their own customizations and add community extensions. This layer
+    would be separate from the Bootstrap core allowing Bootstrap itself to stay up to date 
+    without affecting the project's customizations.
 
-    * Content-specific classes*
-      * Presentational class names like `.button.button__big` were great for
-        optimizing for code reuse. However, we already have a great decoupling
-        utility to prevent us from having to litter our HTML with these names.
-        That utility is the *CSS Preprocessor*.
-      * In addition to the CSS preprocessor, another tool came along called *source-mapping*.
-        This allowed us to find out exactly where in the preprocessed code
-        html elements were getting their styles.
-      * Blocks and modifiers are assigned to mixins, never classes. This means
-        instead of `.navbar` or `.list-box`, you'll define classes that define
-        the content and attach the styles to them. (`.page-navigation`,
-        `.news-feed`)
-    * Lightweight
-      * The sum total of the Kickstart product is one CSS and one JS file.
-      * No jQuery required
-      * By relying mostly on Sass mixins, only the CSS you need ends up in your
-        project.*
-    * Customizable by design
-      * Other frameworks were very hard to style. You would look at websites
-        and immediately know they used a certain framework.
-      * I wanted to make something that was so easy to style, it just required
-        changing no more than ten variables.
-      * The design of the Kickstart compilation system encourages creating
-        themes by treating component styles as extensible classes.
-    * Optimized for specific use cases.
-      * Kickstart recognizes three main areas for website design:
-          - Applications
-          - Content
-          - Marketing
-      * Compatible in popular backend frameworks as well as plain HTML.
-    * Forward-looking
-      * Each release supports the browsers that are the latest at the time of the
-        release. As time goes on, new browsers become old. The Kickstart strategy
-        is to let older releases become the old browser compatible options as a
-        natural extension of the passing of time.
-    * Endless
-      * The components and functions of Kickstart 3 are just what you get out of
-        the box. Kickstart is designed to integrate with third-party components
-        when the standard library isn't sufficient.
+    In the third version of Kickstrap, Bootstrap has been removed entirely, hence the renaming
+    as "Kickstart". Kickstart 3 is now its own CSS framework.
 
-    ### Why does the world need another CSS framework?
+    ## Why another CSS framework?
 
-    I wasn't satisfied with what was out there. Existing CSS frameworks were
-    trying to please too many people by loading up libraries with widgets and
-    way too many use cases.
+    With the previous two versions of Kickstrap, I became very familiar with the intricacies of
+    CSS and frameworks like Bootstrap, Foundation, and Bourbon. I noticed the following:
 
-    My approach for Kickstart was to create a library that covered the bare
-    essentials for a website. The end result would never be enough for everyone,
-    so I designed it to be extendible. The library not only works with but
-    expects external themes. Adding and extending existing functionality is also
-    very straightforward.
+    - Frameworks are huge and slow
+    - Difficult to extend
+    - Have only one or a few themes. Who wants a framework that makes your site look like
+      everyone else's?
 
-    I also wasn't happy how little existing frameworks leaned on the
-    preprocessor. I saw a lot of CSS classes with literally one or two styles
-    behind them, and often just describing the style right in the classname
-    itself. A good library shouldn't force you to write bad code.
+    Extensibility is a #1, unfulfilled need in the world of frameworks.  Kickstart is solving this
+    with its own native solution, the [Kickstart Store](http://kickstart-store.com).
 
-  p * = Applies only to using the Sass version.
