--- a/lib-docs/jade/index.jade
+++ b/lib-docs/jade/index.jade
@@ -8,6 +8,8 @@ block hero
     - var xml = fs.readFileSync('lib-docs/img/kickstart.svg')
     div!= xml
     h2 The framework we've been waiting for.
+    <iframe class="github-stars" src="http://ghbtns.com/github-btn.html?user=ajkochanowicz&repo=kickstart&type=watch&count=true&size=large" allowtransparency="true" frameborder="0" scrolling="0" width="170" height="30"></iframe>
+    <iframe class="github-stars mobile" src="http://ghbtns.com/github-btn.html?user=ajkochanowicz&repo=kickstart&type=watch&count=true" allowtransparency="true" frameborder="0" scrolling="0" width="110" height="20"></iframe>
 
 block content
   article.home-wrapper
