Simplifying the use of logo SVG in header

--- a/lib-docs/jade/index.jade
+++ b/lib-docs/jade/index.jade
@@ -5,8 +5,9 @@ block page-stylesheet
 
 block hero
   header.index-hero
-    - var xml = fs.readFileSync('lib-docs/img/kickstart.svg')
-    div!= xml
+    // - var xml = fs.readFileSync('lib-docs/img/kickstart.svg')
+    // div!= xml
+    <svg class="svg-logo"><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#svg-logo"></use></svg>
     h2 The framework we've been waiting for.
     <iframe class="github-stars" src="http://ghbtns.com/github-btn.html?user=ajkochanowicz&repo=kickstart&type=watch&count=true&size=large" allowtransparency="true" frameborder="0" scrolling="0" width="170" height="30"></iframe>
     <iframe class="github-stars mobile" src="http://ghbtns.com/github-btn.html?user=ajkochanowicz&repo=kickstart&type=watch&count=true" allowtransparency="true" frameborder="0" scrolling="0" width="110" height="20"></iframe>
