--- a/lib-docs/sass/docs.sass
+++ b/lib-docs/sass/docs.sass
@@ -31,7 +31,8 @@ body
     svg
       fill: map-get($black, light)
 
-  svg
+  .svg-logo
+    width: 90px
     height: 20px
     fill: white
     margin-bottom: -4px
