--- a/lib-core/sass/core/components/_modals.sass
+++ b/lib-core/sass/core/components/_modals.sass
@@ -59,7 +59,7 @@
     border-top-right-radius: 0
 
     ul
-      +list($style: 'unstyled horizontal')
+      +list($style: 'unstyled', $layout: 'horizontal')
       text-align: right
 
       li
