--- a/lib-core/sass/core/components/_tabs.sass
+++ b/lib-core/sass/core/components/_tabs.sass
@@ -1,5 +1,5 @@
 =tabs-default
-  +list($style: 'unstyled horizontal')
+  +list($style: 'unstyled' $layout: 'horizontal')
   border-bottom: 1px solid map-get($white, darker)
 
   li
