--- a/lib-docs/jade/docs/3.x/ui/typography/index.jade
+++ b/lib-docs/jade/docs/3.x/ui/typography/index.jade
@@ -190,7 +190,7 @@ block documents
               </ul>
 
               .groceries {
-                @include list($style: 'unstyled horizontal');
+                @include list($style: 'unstyled', $layout: 'horizontal');
               }
 
   .document
