--- a/lib-docs/sass/pages/docs/index.sass
+++ b/lib-docs/sass/pages/docs/index.sass
@@ -181,7 +181,7 @@ code, pre, kbd, samp
 
 // Main page overrides
 .main-navigation
-  svg
+  .svg-logo
     fill: map-get($black, lighter)
 
   +navbar($collapse: true, $background-color: white)
