--- a/lib-docs/sass/pages/docs/ui/typography.sass
+++ b/lib-docs/sass/pages/docs/ui/typography.sass
@@ -53,4 +53,4 @@
   +list($style: 'unstyled')
 
   &.list-horizontal
-    +list($style: 'unstyled horizontal')
+    +list($style: 'unstyled', $layout: 'horizontal')
