Restoring TOC on typography page

--- a/lib-docs/jade/docs/3.x/ui/typography/index.jade
+++ b/lib-docs/jade/docs/3.x/ui/typography/index.jade
@@ -122,7 +122,7 @@ block documents
 
         Sometimes bullets are annoying. Kickstart provides a couple ways of displaying unstyled lists:
 
-        ### Unstyled vertical
+        ## Unstyled vertical
 
       ul.list.list-unstyled
         li Apples
@@ -159,7 +159,7 @@ block documents
   .document
     article.article
       :markdown
-        ### Unstyled horizontal
+        ## Unstyled horizontal
 
       ul.list.list-unstyled.list-horizontal
         li Apples
@@ -202,7 +202,7 @@ block documents
   - for size in ['xxl', 'xl', 'lg', 'md', 'rg', 'sm', 'xs', 'xxs']
     .document
       article.article
-        h2 Size: #{size}
+        h2 Size #{size}
 
         .example
           h1(class="#{size} toc-exempt") Hello World
