--- a/lib-docs/sass/pages/docs/index.sass
+++ b/lib-docs/sass/pages/docs/index.sass
@@ -112,6 +112,10 @@ h3, h4, h5, h6
 .document
   margin-bottom: $space * 4
 
+  h1, h2, h3, h4, h5, h6
+    margin-top: -25px
+    padding-top: 25px
+
   .code
     background: #1d1f21
     padding: $space/4
