--- a/lib-docs/sass/docs.sass
+++ b/lib-docs/sass/docs.sass
@@ -45,9 +45,21 @@ footer.main
   padding: $space 0
   color: white
 
+  p
+    text-align: center
+
   a
     color: white
     text-decoration: underline
+
+  .eio-logo
+    display: inline-block
+    vertical-align: middle
+    width: 25px
+    height: 25px
+
+    svg
+      fill: white
 
 // Growl
 .growl
