Removing 'made from' verbiage

--- a/lib-docs/jade/layout.jade
+++ b/lib-docs/jade/layout.jade
@@ -26,7 +26,7 @@ html(lang='en')
 
     footer.main
       .container
-        p Made from <a href="http://everything.io">Everything</a>
+        p Made by <a href="http://everything.io">Everything</a>
       block preJS
 
       script(src="http://cdnjs.cloudflare.com/ajax/libs/highlight.js/8.2/highlight.min.js")
