--- a/lib-core/jade/layout.jade
+++ b/lib-core/jade/layout.jade
@@ -13,6 +13,6 @@ html(lang='en')
 
     footer.main
       .wrapper
-        p Made from <a href="http://twitter.com/everythingdotio">Everything</a>
+        p Made by <a href="http://twitter.com/everythingdotio">Everything</a>
 
     script(src="/js/script.js")
