--- a/lib-docs/jade/_fullpage-layout.jade
+++ b/lib-docs/jade/_fullpage-layout.jade
@@ -30,7 +30,7 @@ html(lang='en')
     - if (showFooter == true)
       footer.main
         .wrapper
-          p Made from <a href="http://twitter.com/everythingdotio">Everything</a>
+          p Made by <a href="http://twitter.com/everythingdotio">Everything</a>
 
     - else
       script(src="/js/navbar-fixer.js")
