--- a/lib-docs/jade/_layout.jade
+++ b/lib-docs/jade/_layout.jade
@@ -48,7 +48,7 @@ html(lang='en')
         .wrapper
           p
             span.eio-logo!= xml
-            |  Made from&nbsp;
+            |  Made by&nbsp;
             a(href="http://twitter.com/everythingdotio") Everything
 
     - else
