Adding twitter follow widget to bottom

--- a/lib-docs/jade/index.jade
+++ b/lib-docs/jade/index.jade
@@ -98,6 +98,11 @@ block content
             .jquery
             .foundation 
 
+  article.home-wrapper
+    section.follow-everything-for-updates
+      h1 Follow Everything for Updates
+      <a class="twitter-timeline" href="https://twitter.com/everythingdotio" data-widget-id="527147171141783552">Tweets de @everythingdotio</a> <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+"://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
+
     footer.specs(style="display: none")
       h1 Specifications
       
