--- a/lib-docs/sass/pages/index.sass
+++ b/lib-docs/sass/pages/index.sass
@@ -437,3 +437,11 @@ dl
 
     &.mobile
       display: none
+
+.follow-everything-for-updates 
+  h1
+    text-align: center
+
+  .twitter-timeline
+    margin: 0px auto
+    display: block
