Fixing logo issues on mobile

--- a/lib-docs/jade/_header.jade
+++ b/lib-docs/jade/_header.jade
@@ -5,7 +5,7 @@
       li.navbar-title
         a(href="/") 
           != xml
-          <svg class="svg-logo"><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#svg-logo"></use></svg>
+          <svg class="svg-logo-small"><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#svg-logo"></use></svg>
         button(role="button") =
       li: a(href="/") Home
       li: a(href="/docs/#{docsVersion}/") Docs
