--- a/lib-docs/sass/docs.sass
+++ b/lib-docs/sass/docs.sass
@@ -31,7 +31,7 @@ body
     svg
       fill: map-get($black, light)
 
-  .svg-logo
+  .svg-logo-small
     width: 90px
     height: 20px
     fill: white
