Adding bordered tables

--- a/lib-core/sass/core/_direct-apply.sass
+++ b/lib-core/sass/core/_direct-apply.sass
@@ -109,6 +109,7 @@ form
 
       &[data-type="status-yellow"]
         background: map-get($colors, yellow)
+        color: map-get($black, lighter)
 
       &[data-type="status-green"]
         background: map-get($colors, green)
