--- a/lib-core/sass/core/components/_labels.sass
+++ b/lib-core/sass/core/components/_labels.sass
@@ -5,6 +5,9 @@
   color: white
   line-height: normal
   font-weight: bold
+  padding:
+    top: 3px
+    bottom: 3px
 
   @if $background-color == map-get($colors, yellow)
     color: $default-font-color
