--- a/lib-docs/sass/pages/docs/index.sass
+++ b/lib-docs/sass/pages/docs/index.sass
@@ -201,7 +201,7 @@ code, pre, kbd, samp
 
 // Main page overrides
 .main-navigation
-  .svg-logo
+  .svg-logo, .svg-logo-small
     fill: map-get($black, lighter)
 
   +navbar($collapse: true, $background-color: white)
