--- a/lib-core/sass/core/components/_tables.sass
+++ b/lib-core/sass/core/components/_tables.sass
@@ -20,6 +20,8 @@
     th
       font-weight: bold
       text-align: left
+      border-color: $border-color
+      border-bottom-width: 0px
 
   th, td
     background-color: transparent
@@ -49,11 +51,17 @@
   @content
 
 =table-bordered
-  th, td
-    border-bottom: 1px solid $border-color
+  td
+    border-bottom-color: inherit
+    border-bottom-width: 1px
+    border-bottom-style: solid
+
+  thead
+    border-bottom-color: inherit
 
 =table-blank
   border-color: transparent
+  background: transparent
   table, tr, td, tbody, thead, th, tfoot
     border-color: transparent
     background: transparent
