--- a/lib-docs/jade/docs/3.x/ui/tables/index.jade
+++ b/lib-docs/jade/docs/3.x/ui/tables/index.jade
@@ -273,6 +273,73 @@ block documents
 
   .document
     article.article
+      h1 Bordered
+
+      .if-semantic
+        :markdown
+          The standalone `table-bordered()` is also available for elements that
+          already have `table()` applied.
+
+      table.table.table-bordered
+        thead
+          tr
+            th First
+            th Last
+        tbody
+          tr
+            td Jane
+            td Doe
+          tr
+            td Bob
+            td Smith
+          tr
+            td Craig
+            td Thompson
+          tr
+            td Doug
+            td Winston
+
+    article.code
+      :markdown
+        <span>
+
+            <table class="table table-bordered">
+              <thead>
+                <tr>
+                  <th>First</th>
+                  <th>Last</th>
+                </tr>
+              </thead>
+              <tbody>
+                <tr>
+                  <td>Jane</td>
+                  <td>Doe</td>
+                </tr>
+                <tr>
+                  <td>Bob</td>
+                  <td>Smith</td>
+                </tr>
+                <tr>
+                  <td>Craig</td>
+                  <td>Thompson</td>
+                </tr>
+                <tr>
+                  <td>Doug</td>
+                  <td>Winston</td>
+                </tr>
+              </tbody>
+            </table>
+
+      .if-semantic
+        :markdown
+          <span>
+
+              .table.table-bordered {
+                @import table($bordered: true);
+              }
+
+  .document
+    article.article
       h1 Combining
 
       p Styles are designed to be decoupled, so they can be combined with others.
